# BloxHubExecutorNew

./: .gitignore  CMakeLists.txt  Pelajari Proyek dan Kembangkan Loader.md  README.md
.trae/documents/: step5_multi_line_log_plan.md  step6_verify_hijau_plan.md
EXAMPLE PROJECT/3LayersPersistence-main/: CleanupScript.ps1  VerifyPersistence.ps1
EXAMPLE PROJECT/3LayersPersistence-main/3LayersPersistence/: ConvertExeToDll.c  CrtStubs.cpp  Headers.h  Main.c  PersistenceLayers.cpp  Utilities.cpp
EXAMPLE PROJECT/3LayersPersistence-main/3LayersPersistence/Utilities/: DebugMacros.c  DebugMacros.h
checkpoints/: CHECKPOINT_03_FASE1_COMPLETE.md  CHECKPOINT_04_STEP4_FILE_WRITE.md  CHECKPOINT_05_STEP5_MULTI_LINE_LOG.md  CHECKPOINT_06_STEP6_VERIFY_HIJAU.md  CHECKPOINT_20260701.md  CHECKPOINT_20260701_FINAL.md  CHECKPOINT_20260701_LOADER_IMPROVEMENT.md  CHECKPOINT_20260701_MANUALMAP.md  CHECKPOINT_20260702_DLL_TARGET_AUDIT.md  CHECKPOINT_20260702_PLANNING_L2.md  CHECKPOINT_CURRENT.md  README.md
docs/: ARCHITECTURE.md  BUGS.md  BUILD.md  CHECKPOINT_20260701.md  PLANNING.md  README.md  STATUS.md  TODO.md  USAGE.md
example projects/Roblox-Injector-main/opensrcinj/: LICENSE  README
example projects/Roblox-Injector-main/opensrcinj/driver/: main.c
example projects/Roblox-Injector-main/opensrcinj/injector/source/: injector.cpp
example projects/Roblox-Injector-main/opensrcinj/injector/source/helper/: helper.cpp  nthelper.hpp
example projects/Roblox-Injector-main/opensrcinj/module/: dllmain.cpp
example projects/Roblox-Injector-main/opensrcinj/shared/: ioctls.h
include/: injector.hpp  offsets.hpp
offsets/raw/: README.md  offsets.cs  offsets.json  offsets.py
src/: BloxHub.cpp  BloxHubInjector.cpp  BloxHubLoader.cpp  TestProxy.cpp
src/injector/: cfg_bypass.cpp  cfg_bypass.h  hijack.cpp  manual_map.cpp  nt_util.hpp  stomp_inject.cpp  tp_execute.cpp  tp_execute.hpp
src/internal/: d3d9_proxy.cpp  dbghelp_proxy.cpp  dinput8_exports.generated.hpp  dinput8_proxy.cpp  dllmain.cpp  dxgi_proxy.cpp  pe_patcher.cpp  pe_patcher.h  proxy_payload.cpp  version_proxy.cpp  winmm_exports.generated.hpp  winmm_proxy.cpp
